kubernetes/infrastructure/overlays/test/secrets/traefik-dashboard.enc.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: traefik-dashboard
    annotations: null
    namespace: traefik
spec:
    entryPoints:
        - websecure
    tls:
        secretName: traefik-dashboard-cert
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:Cul8HSvwJ5V2sWx6xui2MFivMU8DqMpHeMwjTblx,iv:1/wWnoxR7fsQ4sBUTiN/flk1kV7/O5HlKK2xp+Gqx3o=,tag:wdUPagtvFUpGq5K9wIZyRQ==,type:str]
          services:
            - name: api@internal
              kind: TraefikService
        - kind: Rule
          match: ENC[AES256_GCM,data:uXUoJbiC8gtGhsvTgcaKPyw8/5Z13P5i6BvNXe4L1I9DvJSvHiTTf59xW/JR4CSPe136roI=,iv:RdJPfEzIKTwmrF3UXQOWgoVTKf5EFW/oiriscFnZTc8=,tag:FIoS/Ld3lqjsDSUPXXyHjA==,type:str]
          services:
            - name: api@internal
              kind: TraefikService
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1987m5wdr5t8z9kvhun4sa8nm9ygpt8mrh63mysv7x57fk52xacvqpmnp27
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBzbkJNaXBDdzNKL1FKRUVG
[...]
            ZmUOdfNkjwLh7gZSE5Q4pjAwstMxpau9tqh8mWTwobzp9yV614n7Og==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-09-26T19:03:25Z"
    mac: ENC[AES256_GCM,data:vTtqAFcCRa9ikOioXQkP2bj9QYpLC7Z0BnYSRVRzCyU0NtlECWsEs+X5Tb4cfYAoe87Il3wHkslG9ExSA35fin486n7Y7Q9mIJCuLD124PX4pZLAkVEUI2yAK4Kxr2aRmyCEByPVA47jjKISy6WaJBcYyAa28sACX/fpiMZGij8=,iv:bjXSw2AWCcG38SEjKxk2qvXEiyK6UjF1nReg7wXcBgU=,tag:z30PLtGpBrxsyvXGzmZ4lg==,type:str]
    pgp: []
    encrypted_regex: ^(user.*|pass.*|.*[Bb]earer.*|.*[Kk]ey|.*[Kk]eys|salt|sentry.*|.*[Tt]oken|data|stringData|match)$
    version: 3.9.0
